--- a/scss/page/_footer.scss
+++ b/scss/page/_footer.scss
@@ -1,6 +1,5 @@
 .footer {
     background-color: #303030;
-    height: 449px;
     .border {
         border-bottom: 1px solid #000;
         .container {
@@ -33,11 +32,11 @@
                     }
                     h4 {
                         font-size: 13px;
-                        margin: 0 0 15px 0;
+                        margin: 0 0 10px 0;
                         font-weight: bold;
                     }
                     .date {
-                        margin: 10px 0 15px 0;
+                        margin: 5px 0 10px 0;
                     }
                     .text {
                         font-size: 13px;
@@ -81,10 +80,7 @@
                     p {
                         font-size: 13px;
                         color: #666666;
-                    }
-                    .padding-bottom {
-                        padding-bottom: 30px;
-
+                        margin-bottom: 30px;
                     }
                 }
                 .col4 {
@@ -107,6 +103,7 @@
                     }
                     textarea {
                         height: 75px;
+                        max-width: 100%;
                     }
                     .submit {
                         background-color: $light-green;
