--- a/axit/scss/main.scss
+++ b/axit/scss/main.scss
@@ -43,3 +43,14 @@
 @import "page/slider";
 @import "page/body";
 @import "page/footer";
+@import "page/tab";
+@import "page/sub-list";
+@import "page/standard-picture";
+@import "page/awesome";
+@import "page/pricing-option";
+@import "page/styllish-axure";
+@import "page/contact";
+
+
+
+
