--- a/axit/scss/layout/_header.scss
+++ b/axit/scss/layout/_header.scss
@@ -1,33 +1,116 @@
 .header {
-  background-color: #290000;
-  height: 600px;
-  border-top: solid 5px $light-green;
-  .container{
-      .menu-bar {
-          padding-top: 40px;
-          .menu {
-              float: right;
-              li {
-                  a {
-                      padding: 8px 15px;
-                      margin-right: 10px;
-                      font-size: 13px;
-                      color: #ffffff;
-                      @include css3-prefix(transition, .5s);
-                      border-radius: 10px;
-                      &:hover {
-                          background-color: $light-green;
-                      }
-                      &:focus {
-                          background-color: transparent;
-                      }
-                  }
-                  .active {
-                      background-color: $light-green;
-                      border-radius: 10px;
-                  }
-              }
-          }
-      }
-  }
+    box-shadow: 0 0 10px 0 #d6d6d6;
+    .top-header {
+        background-color: #000000;
+        img {
+            float: left;
+            padding: 20px 0;
+        }
+        .menu {
+            float: right;
+            padding: 25px 0;
+            li {
+                a {
+                    color: #848484;;
+                    padding: 0 25px;
+                    &:hover {
+                        background-color: transparent;
+                    }
+                    &:focus {
+                        background-color: transparent;
+                    }
+                }
+            }
+        }
+    }
+    .slider {
+        background-image: url(" ../img/bkg.png");
+        height: 640px;
+        max-width: 100%;
+        .container {
+            .slider-left {
+                margin-top: 110px;
+                h1, p {
+                    color: #ffffff;
+                }
+                h1 {
+                    margin: 30px 0 40px 0;
+                }
+                p {
+                    margin: 38px 0 47px 0;
+                }
+                .border {
+                    margin: 25px 0;
+                    border-bottom: solid 2px #ffffff;
+                    width: 65px;
+                }
+                button {
+                    background: transparent;
+                    color: #ffffff;
+                    border: solid 2px #ffffff;
+                    padding: 10px 30px;
+                }
+            }
+            .slider-right {
+                margin-top: 140px;
+                border-radius: 5px;
+                padding-left: 120px;
+
+                .slider-right-top {
+                    background-color: #f5f5f5;
+                    text-align: center;
+                    font-size: 20px;
+                    padding: 15px 0;
+                    span {
+                        color: #ff9b51;
+                    }
+                }
+                .slide-right-body {
+                    background-color: #ffffff;
+                    padding: 0 30px 30px 30px;
+                    .input {
+                        width: 100%;
+                        background-color: #ffffff;
+                        border: transparent;
+                        outline: none;
+                        //padding: 40px 33px;
+                        padding-top: 35px;
+                        padding-bottom: 5px;
+                        border-bottom: 1px solid #f5f5f5;
+
+                    }
+                }
+                .slider-right-bottom {
+                    background-color: #ff9b51;
+                    color: #ffffff;
+                    text-align: center;
+                    padding: 20px 0;
+                }
+            }
+        }
+    }
+    .bottom-header {
+        .container {
+            padding: 0;
+            .social-media {
+                float: left;
+                margin: 20px 0;
+                h3 {
+                    margin-top: 0;
+                    font-size: 20px;
+                }
+                p {
+                    font-size: 14px;
+                    color: #86878b;
+                    margin-bottom: 0;
+                }
+            }
+            .img-social {
+                float: right;
+                vertical-align: middle;
+                margin-top: 30px;
+            }
+        }
+
+    }
 }
