--- a/axit/scss/page/_footer.scss
+++ b/axit/scss/page/_footer.scss
@@ -1,138 +1,17 @@
 .footer {
-    background-color: #303030;
-    .border {
-        border-bottom: 1px solid #000;
-        .container {
-            padding-top: 40px;
-            .clearfix {
-                padding-bottom: 60px;
-                .col {
-                    width: 25%;
-                    float: left;
-                    padding-right: 20px;
-                    .color-light-green {
-                        color: $light-green;
-                    }
+    background-color: #000000;
+    position: relative;
+    height: 83px;
+    .footer-wrap {
+        position: absolute;
+        right: 50%;
+        top: 50%;
+        @include css3-prefix('transform', 'translate(50%, -50%)');
 
-                }
-                .col1 {
-                    width: 25%;
-                    float: left;
-                    .color-light-green {
-                        color: $light-green;
-                    }
-
-                    h3 {
-                        color: #fff;
-                        font-size: 16px;
-                        margin: 0 0 30px 0;
-                    }
-                    .text, .date {
-                        color: #979797;
-                    }
-                    h4 {
-                        font-size: 13px;
-                        margin: 0 0 10px 0;
-                        font-weight: bold;
-                    }
-                    .date {
-                        margin: 5px 0 10px 0;
-                    }
-                    .text {
-                        font-size: 13px;
-                    }
-                    .admin, .domain, .date {
-                        font-size: 10px;
-                    }
-                    .domain {
-                        color: #666666;
-                    }
-                    .read-more {
-                        font-size: 13px;
-                        cursor: pointer;
-                        text-decoration: none;
-
-                    }
-                }
-                .col2 {
-                    h3 {
-                        color: #fff;
-                        font-size: 16px;
-                        margin: 0 0 30px 0;
-                    }
-                    .text-row {
-                        border-bottom: 1px solid #404040;
-                        padding: 5px 0;
-                        a {
-                            font-size: 13px;
-                            cursor: pointer;
-                            text-decoration: none;
-                        }
-                    }
-                }
-                .col3 {
-                    h3 {
-                        font-size: 16px;
-                        color: #fff;
-                        margin: 0 0 35px 0;
-                    }
-
-                    p {
-                        font-size: 13px;
-                        color: #666666;
-                        margin-bottom: 30px;
-                    }
-                }
-                .col4 {
-                    h3 {
-                        font-size: 16px;
-                        color: #fff;
-                        margin: 0 0 35px 0;
-                    }
-                    input, textarea {
-                        background-color: #222222;
-                        color: #989898;
-                        margin-bottom: 10px;
-                        border: none;
-                        border-radius: 10px;
-                        width: 100%;
-                        height: 35px;
-                        outline: none;
-                        font-size: 13px;
-                        padding-left: 10px;
-                    }
-                    textarea {
-                        height: 75px;
-                        max-width: 100%;
-                    }
-                    .submit {
-                        background-color: $light-green;
-                        color: #303030;
-                        width: 75px;
-                        padding-left: 0;
-                        padding-right: 0;
-                        font-weight: bold;
-                    }
-                }
-            }
+        p {
+            margin-bottom: 0;
+            margin-top: 10px;
+            text-align: center;
         }
-    }
-    .copyright {
-        color: #979797;
-        background-color: #2b2b2b;
-        line-height: 60px;
-        .container{
-            font-size: 12px;
-            padding: 0;
-            .contain {
-                float: left;
-                padding: 0;
-            }
-            .template {
-                float: right;
-            }
-        }
-
     }
 }
-
