--- a/axit/scss/layout/_header.scss
+++ b/axit/scss/layout/_header.scss
@@ -30,19 +30,59 @@
         .container {
             .slider-left {
                 margin-top: 110px;
+                @include bp-ip6-plus {
+                    margin-top: 40px;
+
+                }
+                @include bp-ip6 {
+                    margin-top: 40px;
+                }
+                @include bp-ip4 {
+                    margin-top: 40px;
+                }
                 h1, p {
                     color: #ffffff;
                 }
                 h1 {
                     margin: 30px 0 40px 0;
+                    @include bp-ip6-plus {
+                            font-size: 24px;
+                            margin: 20px 0;
+                    }
+                    @include bp-ip6{
+                        font-size: 24px;
+                        margin: 20px 0;
+                    }
+                    @include bp-ip4{
+                        font-size: 24px;
+                        margin: 20px 0;
+                    }
                 }
                 p {
                     margin: 38px 0 47px 0;
+                    @include bp-ip6-plus {
+                        margin: 20px 0;
+                    }
+                    @include bp-ip6 {
+                        margin: 20px 0;
+                    }
+                    @include bp-ip4 {
+                        margin: 20px 0;
+                    }
                 }
                 .border {
                     margin: 25px 0;
                     border-bottom: solid 2px #ffffff;
                     width: 65px;
+                    @include bp-ip6-plus {
+                        margin: 10px 0;
+                    }
+                    @include bp-ip6 {
+                        margin: 10px 0;
+                    }
+                    @include bp-ip4 {
+                        margin: 10px 0;
+                    }
                 }
                 button {
                     background: transparent;
@@ -51,16 +91,40 @@
                     padding: 10px 30px;
                 }
             }
+
             .slider-right {
                 margin-top: 140px;
                 border-radius: 5px;
                 padding-left: 120px;
-
+                @include bp-ip6-plus {
+                    margin-top: 50px;
+                    padding: 0 20px 0 20px;
+                }
+                @include bp-ip6 {
+                    margin-top: 50px;
+                    padding: 0 20px 0 20px;
+                }
+                @include bp-ip4 {
+                    margin-top: 20px;
+                    padding: 0 20px 0 20px;
+                }
                 .slider-right-top {
                     background-color: #f5f5f5;
                     text-align: center;
                     font-size: 20px;
                     padding: 15px 0;
+                    @include bp-ip6-plus {
+                         padding: 10px 0;
+                         font-size: 14px;
+                     }
+                    @include bp-ip6 {
+                        padding: 10px 0;
+                        font-size: 14px;
+                    }
+                    @include bp-ip4 {
+                        padding: 10px 0;
+                        font-size: 14px;
+                    }
                     span {
                         color: #ff9b51;
                     }
@@ -73,10 +137,16 @@
                         background-color: #ffffff;
                         border: transparent;
                         outline: none;
-                        //padding: 40px 33px;
                         padding-top: 35px;
                         padding-bottom: 5px;
                         border-bottom: 1px solid #f5f5f5;
+                        @include  bp-ip6-plus {
+                            padding-top: 15px;
+                        }
+
+                        @include  bp-ip4 {
+                            padding-top: 15px;
+                        }
 
                     }
                 }
@@ -85,8 +155,19 @@
                     color: #ffffff;
                     text-align: center;
                     padding: 20px 0;
+                    @include  bp-ip6-plus {
+                        padding: 10px 0;
+                    }
+                    @include  bp-ip6 {
+                        padding: 10px 0;
+                    }
+                    @include  bp-ip4 {
+                        padding: 10px 0;
+                    }
                 }
+
             }
+
         }
     }
     .bottom-header {
@@ -109,8 +190,20 @@
                 float: right;
                 vertical-align: middle;
                 margin-top: 30px;
+                max-width: 100%;
+                @include bp-ip6-plus {
+                    margin: 15px 0;
+                }
+                @include bp-ip6 {
+                    margin: 15px 0;
+
+                }
+                @include bp-ip4 {
+                    margin: 15px 0;
+
+                }
             }
         }
-
     }
 }
+
