--- a/axit/scss/page/_awesome.scss
+++ b/axit/scss/page/_awesome.scss
@@ -1,11 +1,23 @@
 .awesome {
     padding-top: 100px;
     padding-bottom: 100px;
+    @include bp-ip6-plus {
+        padding: 40px 0;
+    }
+    @include bp-ip6{
+        padding: 40px 0;
+    }
     .container {
         .awesome-title {
             margin-bottom: 70px;
             text-align: center;
             position: relative;
+            @include bp-ip6-plus {
+                margin-bottom: 20px;
+            }
+            @include bp-ip6 {
+                margin-bottom: 20px;
+            }
             p {
                 color: #a6a7a9;
                 margin-top: 50px;
@@ -26,6 +38,12 @@
         .clearfix {
             .awesome-col {
                 text-align: center;
+                @include bp-ip6-plus {
+                    margin-top: 20px;
+                }
+                @include bp-ip6 {
+                    margin-top: 20px;
+                }
                 p {
                     color: #a6a7a9;
                 }
