--- a/axit/scss/page/_contact.scss
+++ b/axit/scss/page/_contact.scss
@@ -1,6 +1,10 @@
 .contact {
     padding-top: 100px;
     padding-bottom: 80px;
+    @include  bp-ip6-plus {
+        padding-bottom: 50px;
+        padding-top: 50px;
+    }
     .container {
         text-align: center;
         .contact-title {
@@ -24,7 +28,6 @@
                     border-bottom: 1px solid #f5f5f5;
                 }
             }
-
             .message {
                 padding-left: 30px;
                 textarea {
