--- a/axit/scss/page/_pricing-option.scss
+++ b/axit/scss/page/_pricing-option.scss
@@ -2,6 +2,12 @@
     background-color: #f5f5f5;
     padding-top: 100px;
     padding-bottom: 100px;
+    @include bp-ip6-plus {
+        padding: 40px 0;
+    }
+    @include bp-ip6 {
+        padding: 40px 0;
+    }
     .container {
         .pricing-option-title {
             text-align: center;
@@ -26,6 +32,12 @@
             .basic {
                 text-align: center;
                 margin-top: 115px;
+                @include bp-ip6-plus {
+                    margin-top: 20px;
+                }
+                @include bp-ip6 {
+                    margin-top: 20px;
+                }
                 .basic-wrap {
                     .top-basic {
                         border-bottom: 1px solid #ffffff;
