--- a/axit/scss/page/_standard-picture.scss
+++ b/axit/scss/page/_standard-picture.scss
@@ -1,6 +1,12 @@
 .standard-picture {
     background-color: #f5f5f5;
     padding: 80px 0;
+    @include bp-ip6-plus {
+        padding: 40px 0;
+    }
+    @include bp-ip6 {
+        padding: 40px 0;
+    }
     .container {
         .clearfix {
             .standard-picture-content {
@@ -21,15 +27,12 @@
                 .paragraph-bottom {
                     margin-top: 25px;
                 }
-                img {
-                    padding-left: 100px;
-                }
+            }
+            .standard-img {
+                max-width: 100%;
             }
 
         }
     }
-
-
-
 
 }
