--- a/axit/scss/page/_tab.scss
+++ b/axit/scss/page/_tab.scss
@@ -2,6 +2,12 @@
     background-color: #f5f5f5;
     padding-bottom: 110px;
     padding-top: 150px;
+    @include bp-ip6-plus {
+        padding: 70px 0;
+    }
+    @include bp-ip6 {
+        padding: 70px 0;
+    }
     .container {
         .number-tab {
             flex-direction: column;
@@ -24,11 +30,11 @@
             .sub1, .sub2 {
                 border-bottom: solid 1px #ffffff;
             }
-            .tab-building-img {
-               max-width: 100%;
-                padding-left: 40px;
-
-            }
+        }
+        .tab-building-img {
+            padding-left: 40px;
+            max-width: 100%;
+            margin-top: 20px;
         }
         .sub-tab-content {
             padding-right: 60px;
@@ -36,6 +42,12 @@
             h3 {
                 font-size: 20px;
                 margin: 10px 0 55px 0;
+                @include bp-ip6-plus {
+                    margin-bottom: 30px;
+                }
+                @include bp-ip6 {
+                    margin-bottom: 30px;
+                }
             }
             p {
                 color: #86878b;
@@ -54,6 +66,13 @@
             }
 
         }
+        img {
+            @include bp-ip6-plus {
+                margin-top: 40px;
+            }
+            @include bp-ip6 {
+                margin-top: 40px;
+            }
+        }
     }
-
 }
